--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,12 @@
 
 body {
     background-color: #f5f5f5;
-    font-family: 'Roboto',sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.header {
+    text-align: center;
+    margin-top: 37px;
+    font-size: 80px;
+    font-weight: bolder;
+}
