--- a/styles.css
+++ b/styles.css
@@ -26,4 +26,15 @@ body {
     gap: 100px;
     max-width: 1100px;
     margin: 0 auto;
+    border: 1px solid black;
+}
+
+.settings {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    width: 200px;
+    border: 1px solid black;
 }
