--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 body {
     background-color: #f5f5f5;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: auto;
 }
 
 .header {
@@ -37,4 +38,11 @@ body {
     gap: 30px;
     width: 200px;
     border: 1px solid black;
+}
+
+button,
+input {
+    width: 100%;
+    border: none;
+    font-size: 24px;
 }
