--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -37,7 +37,6 @@ body {
     justify-content: center;
     gap: 30px;
     width: 200px;
-    border: 1px solid black;
 }
 
 button,
@@ -57,7 +56,7 @@ input[type= 'color'] {
 
 button:hover,
 input[type='color']:hover {
-  transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 button {
@@ -94,4 +93,30 @@ input[type='color']::-webkit-color-swatch {
     border: none;
     border-radius: 50px;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.size-value {
+    margin-bottom: -20px;
+    font-size: 22px;
+}
+
+input[type='range'] {
+    appearance: none;
+    background-color: #f5f5f5;
+}
+
+input[type='range']::-webkit-slider-runnable-track {
+    height: 10px;
+    border: 1px solid #333;
+    border-radius: 25px;
+    background-color: #f5f5f5;
+}
+
+input[type='range']::-webkit-slider-thumb {
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    border-radius: 25px;
+    margin-top: -8px;
+    background-color: #333;
 }
