--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,10 @@ input[type='range']::-webkit-slider-thumb {
     background-color: #fefefe;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+.footer {
+    font-size: 30px;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
