--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #f5f5f5;
+    background-color: #f0ebe0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     height: auto;
 }
@@ -18,7 +18,7 @@ body {
     font-size: 80px;
     font-weight: bolder;
     margin-bottom: 29px;
-    color: #333;
+    color: #4f4327;
 }
 
 .container {
@@ -62,14 +62,15 @@ input[type='color']:hover {
 
 button {
     padding: 10px 20px;
-    border: 1px solid #333;
+    border: 1px solid #4f4327;
     border-radius: 5px;
     font-size: 16px;
-    background-color: #f5f5f5;
+    background-color: #f0ebe0;
+    color: #0e0c07;
 }
 
 button.active {
-    background-color: #333;
+    background-color: #4f4327;
     color: #ededed;
 }
 
