--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,11 @@ input[type='range']::-webkit-slider-thumb {
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
+.box {
+    border: 0.5px solid rgba(0, 0, 0, 0.05);
+    border-radius: 0.5rem;
+}
+
 .footer {
     font-size: 30px;
     text-align: center;
