--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ input[type='color']::-webkit-color-swatch {
 .size-value {
     margin-bottom: -20px;
     font-size: 22px;
+    color: #4f4327;
 }
 
 input[type='range'] {
@@ -141,4 +142,5 @@ input[type='range']::-webkit-slider-thumb {
     text-align: center;
     margin-top: 40px;
     margin-bottom: 20px;
+    color: #4f4327;
 }
