--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,6 @@ body {
     align-items: center;
     justify-content: flex-start;
     gap: 100px;
-    max-width: 1100px;
     margin: 0 auto;
 }
 
@@ -38,6 +37,7 @@ body {
     gap: 30px;
     width: 200px;
     align-self: flex-start;
+    margin-left: 40px;
 }
 
 button,
@@ -126,6 +126,7 @@ input[type='range']::-webkit-slider-thumb {
 
 .grid {
     display: flex;
+    flex-wrap: wrap;
     width: 960px;
     height: 960px;
     background-color: #fefefe;
@@ -134,7 +135,7 @@ input[type='range']::-webkit-slider-thumb {
 
 .box {
     border: 0.5px solid rgba(0, 0, 0, 0.05);
-    border-radius: 0.5rem;
+    border-radius: 0.5px;
 }
 
 .footer {
