--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,12 @@
   margin: 0;
 }
 
-:root{
+body {
+  background-color: var(--backgroung_color);
+  height: auto;
+}
+
+:root {
   --font_color: #090a20;
   --backgroung_color: #e3e4f7;
   --grid_backgroundcolor:  #fefefe;
@@ -27,4 +32,24 @@
   font-size: 60px;
   padding: 30px 0px;
   font-family: pacifico;
+  text-shadow: 5px 5px var(--accent);
+}
+
+.main{
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  flex-flow: row wrap;
+  width: 750px;
+  height: 750px;
+  border: solid 2px var(--accent);
+  border-radius: 7px;
+}
+
+.grid {
+  border: 0.5px solid rgba(0, 0, 0, 0.05);
+  border-radius: 4.5px;
 }
