--- a/styles.css
+++ b/styles.css
@@ -66,3 +66,10 @@ body {
   border: 0.5px solid var(--primary_color);
   border-radius: 4.5px;
 }
+
+.footer{
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 26px;
+}
