--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,21 @@ body {
   background-color: var(--grid_backgroundcolor);
 }
 
+.container2 {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  padding: 20px;
+  width: 170px;
+  height: 220px;
+  background-color: var(--accent);
+  border: 2px solid var(--accent);
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+}
+
 .grid {
   border: 0.5px solid var(--primary_color);
   border-radius: 4.5px;
