--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
   flex-direction: column;
   justify-content: center;
   gap: 10px;
-  padding: 20px;
+  padding: 0px 20px 0px 20px;
   width: 170px;
   height: 220px;
   background-color: var(--accent);
@@ -80,6 +80,7 @@ body {
   text-align: center;
   font-size: 24px;
   font-family: monomaniac;
+  margin-top: -40px;
 }
 
 .gridSize {
