Add hover effect on buttons class

--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,10 @@ body {
   cursor: pointer;
 }
 
+.buttons:hover {
+  background-color: var(--secondary_button);
+}
+
 .btnGrd,
 .eraser,
 .colors,
